--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:background="#334255"
                     android:padding="10dp"
-                    android:text="Airport Hospitality"
+                    android:text="@string/hospitality"
                     android:textColor="#fff" />
 
                 <com.hsalf.smilerating.SmileRating
@@ -91,16 +91,14 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-
-                >
+                android:orientation="vertical">
 
                 <com.teamshunya.silencio.Classes.CustomFontTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#334255"
                     android:padding="10dp"
-                    android:text="Airport Cleaniness"
+                    android:text="@string/clean"
                     android:textColor="#fff" />
 
                 <com.hsalf.smilerating.SmileRating
